--- a/index.html
+++ b/index.html
@@ -4,20 +4,132 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TP08_INTRODUCCION</title>
+  <title>TP08 - Ejercicios</title>
   <link rel="stylesheet" href="style.css">
   <script src="js/ejercicio.js"></script>
   <script src="js/utils.js"></script>
 </head>
 
-  <button onclick="calcularEdad(document.getElementById('fechaEdad').value, document.getElementById('nombreEdad').value)">Calculadora de Edad</button>
-  <button onclick="tirarFruta(document.getElementById('ejercicioSeleccionado').value)">Tirando Fruta</button>
-  <button onclick="compararDatos()">Comparando Datos y Tipos</button>
-  <button onclick="yoObjeto()">Objeto Ciudad</button>
-  <button onclick="doblarArray(document.getElementById('arrayNumeros').value)">Doble de Elementos</button>
-  <button onclick="dibujarTriangulos()">Triángulo de Asteriscos</button>
-  <button onclick="filtrarNombres(document.getElementById('nombresInput').value)">Nombres con 'A'</button>
-  <button onclick="reemplazarPalabra(document.getElementById('textoOriginal').value,document.getElementById('palabraBuscar').value,document.getElementById('palabraReemplazo').value)">Reemplazar Palabras</button>
-  <button onclick="cortarTexto(document.getElementById('textoCortar').value, document.getElementById('numCaracteres').value)">Cortar Texto</button>
-  <button onclick="separarLista(document.getElementById('listaSeparador').value)">String con Separador</button>
-  <button onclick="calcularRecaudacion(document.getElementById('pedidosInput').value)">Calculadora de Recaudación</button>
+<body>
+
+  <header>
+    <h1>TP08 - Ejercicios</h1>
+  </header>
+
+  <nav id="menu">
+    <h2>Seleccioná un ejercicio</h2>
+    <button onclick="mostrarEj(1)">Ejercicio 1</button>
+    <button onclick="mostrarEj(2)">Ejercicio 2</button>
+    <button onclick="mostrarEj(3)">Ejercicio 3</button>
+    <button onclick="mostrarEj(4)">Ejercicio 4</button>
+    <button onclick="mostrarEj(5)">Ejercicio 5</button>
+    <button onclick="mostrarEj(6)">Ejercicio 6</button>
+    <button onclick="mostrarEj(7)">Ejercicio 7</button>
+    <button onclick="mostrarEj(8)">Ejercicio 8</button>
+    <button onclick="mostrarEj(9)">Ejercicio 9</button>
+    <button onclick="mostrarEj(10)">Ejercicio 10</button>
+    <button onclick="mostrarEj(11)">Ejercicio 11</button>
+  </nav>
+
+  <section id="ej1">
+    <h2>1. Calculadora de Edad</h2>
+    <input type="text" id="nombreEdad" placeholder="Nombre">
+    <input type="text" id="fechaEdad" placeholder="YYYY-MM-DD">
+    <button
+      onclick="calcularEdad(document.getElementById('fechaEdad').value, document.getElementById('nombreEdad').value)">Calcular</button>
+    <p id="mensaje1"></p>
+  </section>
+
+  <section id="ej2">
+    <h2>2. Tirando Fruta</h2>
+    <input type="text" id="fruta" placeholder="Ingresá una fruta">
+    <button onclick="tirarFruta(document.getElementById('fruta').value)">Buscar</button>
+    <p id="mensaje2"></p>
+  </section>
+
+  <section id="ej3">
+    <h2>3. Comparando Datos y Tipos</h2>
+    <button onclick="compararDatos()">Probar Comparaciones</button>
+    <p id="mensaje3"></p>
+  </section>
+
+  <section id="ej4">
+    <h2>4. Objeto Ciudad</h2>
+    <button onclick="yoObjeto()">Mostrar Ciudad</button>
+    <p id="mensaje4"></p>
+  </section>
+
+  <section id="ej5">
+    <h2>5. Doble de Elementos</h2>
+    <input type="text" id="arrayNumeros" placeholder="Ej: 1,2,3,4">
+    <button onclick="doblarArray(document.getElementById('arrayNumeros').value)">Doblar</button>
+    <p id="mensaje5"></p>
+  </section>
+
+  <section id="ej6">
+    <h2>6. Triángulo de Asteriscos</h2>
+    <button onclick="dibujarTriangulos()">Dibujar</button>
+    <p id="trianguloA1"></p>
+    <p id="trianguloA2"></p>
+    <p id="trianguloA3"></p>
+    <p id="trianguloA4"></p>
+    <p id="trianguloA5"></p>
+
+    <p id="trianguloB1"></p>
+    <p id="trianguloB2"></p>
+    <p id="trianguloB3"></p>
+    <p id="trianguloB4"></p>
+    <p id="trianguloB5"></p>
+  </section>
+
+  <section id="ej7">
+    <h2>7. Nombres con 'A'</h2>
+    <input type="text" id="nombresInput" placeholder="Poné nombres">
+    <button onclick="filtrarNombres(document.getElementById('nombresInput').value)">Filtrar</button>
+    <p id="mensaje7"></p>
+  </section>
+
+  <section id="ej8">
+    <h2>8. Reemplazar Palabras</h2>
+    <input type="text" id="textoOriginal" placeholder="Texto" required>
+    <input type="text" id="palabraBuscar" placeholder="Buscar" required>
+    <input type="text" id="palabraReemplazo" placeholder="Reemplazar" required>
+    <button
+      onclick="reemplazarPalabra(document.getElementById('textoOriginal').value, document.getElementById('palabraBuscar').value, document.getElementById('palabraReemplazo').value)">Reemplazar</button>
+    <p id="mensaje8"></p>
+  </section>
+
+  <section id="ej9">
+    <h2>9. Cortar Texto</h2>
+    <input type="text" id="textoCortar" placeholder="Texto">
+    <input type="number" id="numCaracteres" placeholder="Cantidad">
+    <button
+      onclick="cortarTexto(document.getElementById('textoCortar').value, document.getElementById('numCaracteres').value)">Cortar</button>
+    <p id="mensaje9"></p>
+  </section>
+
+  <section id="ej10">
+    <h2>10. String con Separador</h2>
+    <input type="text" id="listaSeparador" placeholder="Ej: uno,dos,tres">
+    <button onclick="separarLista(document.getElementById('listaSeparador').value)">Separar</button>
+    <p id="mensaje10"></p>
+  </section>
+
+  <section id="ej11">
+    <h2>11. Calculadora de Recaudación</h2>
+    <input type="text" id="pedidosInput" placeholder='Ej: Pizza:15.50,Hamburguesa:8.75'>
+    <button onclick="calcularRecaudacion(document.getElementById('pedidosInput').value)">Calcular</button>
+    <p id="mensaje11"></p>
+  </section>
+
+  <script>
+    function mostrarEj(num) {
+      var secciones = document.getElementsByTagName('section');
+      for (var i = 0; i < secciones.length; i++) secciones[i].style.display = 'none';
+      if (document.getElementById('ej' + num)) document.getElementById('ej' + num).style.display = 'block';
+    }
+    mostrarEj(1);
+  </script>
+
+</body>
+</html>
